# fundamental-data-manager

./: .gitignore  bloomberg-api-enhanced.py  bloomberg-api-fixed.py  bloomberg_dynamic_client.py  deploy_guide.sh  test_dynamic_approach.py  test_more_strikes.py  test_volatility_table.py
DUPLICATE_CRAP_FROM_RESEARCH_WORKSPACE/: Agent_System.terminal  Dockerfile.claude-specialist  README_CLEANUP.md  check_cftc_cosmos_query.py  check_world_bank_cosmos.py  claude_code_web_wrapper.py  final_demo.py  http_test.py  macro_analysis_journey.py  mcp_stdio_test.py  package-lock.json  package.json  simple_mcp_server.py  terminal_agent_setup.sh  terminal_setup.sh  terminal_window_group_setup.sh  test_mcp_client.py
DUPLICATE_CRAP_FROM_RESEARCH_WORKSPACE/Claude_SDK_Development/: claude-specialist-k8s.yaml  claude_sdk_automation_example.py  claude_sdk_quick_demo.py  deploy_claude_specialist.py  local_mcp_server.py  mcp_demo.py  pyproject.toml  requirements-claude-specialist.txt
Engineering_Projects/: pyproject.toml
Engineering_Projects/project-workspace/: README.md
Engineering_Scripts/: .env.template  AGENT_BRAIN_ENHANCEMENT_DOCUMENTATION.md  CONSTITUTIONAL_UPDATE_SUMMARY.md  HEAD_OF_ENGINEERING_MESSAGE_SUMMARY.md  HEAD_OF_ENGINEERING_RESPONSE_SUMMARY.md  HEAD_OF_RESEARCH_COMMUNICATIONS_SUMMARY.md  README.md  add_context_separation_requirement.py  add_email_checking_requirement.py  add_enforcement_records.py  add_immediate_sequential_action_requirement.py  add_knowledge_separation_requirement.py  add_no_arbitrary_deadlines_requirement.py  add_no_past_issues_requirement.py  add_no_planning_theater_requirement.py  add_single_compliance_report.py  add_working_systems_requirement.py  agent_audit_questionnaire.md  agent_brain_enhancement_system.py  analyze_audit_container.py  analyze_constitutional_framework.py  analyze_enforcement_requirements.py  analyze_message_format_issues.py  analyze_missed_message_patterns.py  analyze_recipient_field_inconsistency.py  automated_violation_checker.py  automated_violation_detection_service.py  azure_monitor.py  browser_debug_cosmos_viewer.py  check_and_create_logs_container.py  check_claude_code_messages.py  check_container_contents.py  check_corrected_proposal.py  check_engineering_messages.py  check_head_of_staff_response.py  check_if_replied.py  check_manager_feedback.py  check_manager_feedback_UPGRADED.py  check_messages_properly.py  check_messages_requiring_response.py  (+170 more)
GZC Intel App/: CRITICAL_ISSUES_ANALYSIS.md  EXACT_USER_REQUIREMENTS.md  IMPLEMENTATION_PLAN_SIMPLIFIED.md  INTEGRATION_PLAN_COMPLETE.md  PROFESSIONAL_DESIGN_SPECIFICATION.md  PROFESSIONAL_IMPLEMENTATION_ARCHITECTURE.md  PROJECT_ARCHITECTURE.md  PROJECT_GENEALOGY_COMPLETE.md  README.md  STYLING_AND_VISUALIZATION_ARCHITECTURE.md  USER_REQUIREMENTS_AND_PROJECT_GENEALOGY.md
Research_Output/: MESSAGING_SCHEMA_V2_ENFORCED.json  cftc_cosmos_entry.json  coordination_messages.json  demo_ai_news_report.json  fred_health_check_20250628_152330.json  fred_health_check_20250628_153433.json  fred_health_check_20250628_160106.json  fund_positions_pivot_20250702_111740.csv  fund_positions_report_20250702_111740.csv  fx_positions_calculated.json  japan_real_estate_data.json  latest_full_ai_news.json  message_backup_20250626_182610.json  package-lock.json  package.json  session_status.json  world_bank_api_entry_latest.json
bloomberg-gemini-setup/: README.md  (+5 more)
bloomberg-volatility-component/pricing-engine/: BLOOMBERG_FIELDS_DISCOVERED.md  KUBERNETES_DEPLOYMENT.md  README.md  YIELD_CURVE_INSTRUMENTS_AVAILABLE.md  main.py  pyproject.toml  requirements.txt
bloomberg-volatility-component/pricing-engine/api/: health.py  market_data.py
bloomberg-volatility-component/pricing-engine/core/: fx_options.py
bloomberg-volatility-component/pricing-engine/models/: market.py
bloomberg-volatility-component/pricing-engine/services/: bloomberg.py
(+1175 files in other folders)
