[tool.poetry]
name = "engineering-workspace"
version = "1.0.0"
description = "Minimalistic engineering tools for AI workspace"
authors = ["Engineering Team"]

[tool.poetry.dependencies]
python = "^3.9"
azure-cosmos = "^4.5.1"
azure-storage-blob = "^12.19.0"
python-dotenv = "^1.0.0"
click = "^8.1.7"
requests = "^2.31.0"
flask = "^3.0.0"
flask-cors = "^4.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
black = "^23.11.0"
ruff = "^0.1.6"

[tool.poetry.scripts]
cosmos-tools = "scripts.cosmos_tools:main"
process-logs = "scripts.claude_session_processor:watch_and_process"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py39']

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]